# nushell

./: CHANGELOG-SEKS.md  Cargo.toml  README.md  SEKSH_README.md
.github/: pull.yml
.github/workflows/: ci.yml  release.yml
crates/nu-cmd-seks/: Cargo.toml
crates/nu-cmd-seks/src/: getseks.rs  lib.rs  listseks.rs  seksh_git.rs  seksh_http.rs
crates/nu-protocol/: Cargo.toml
crates/nu-protocol/src/pipeline/: byte_stream.rs  pipeline_data.rs
crates/nu-seks/: Cargo.toml  README.md
crates/nu-seks/src/: broker.rs  lib.rs  registry.rs  scrubber.rs  writer.rs
crates/seks-broker/: Cargo.toml
crates/seks-broker/src/: api.rs  auth.rs  crypto.rs  db.rs  main.rs  web.rs
crates/seks-broker/templates/: activity.html  agents.html  base.html  dashboard.html  index.html  login.html  secrets.html  secrets_add.html
docs/: INSTALL.md  INTEGRATION.md  SEKS_DESIGN.md  SOCIAL_ENGINEERING_REDTEAM.md  WRAPPED_COMMANDS.md  per-user-homebrew.md
scripts/: homebrew-per-user.sh
src/: command_context.rs
