[package]
name = "seks-broker"
version = "0.110.1"
authors = ["The Nushell Project Developers", "SEKS Project Contributors"]
description = "SEKS Broker - Secret management daemon for SEKS shell"
edition = "2024"
license = "MIT"
repository = "https://github.com/rotcsgame/seksh/tree/main/crates/seks-broker"

[[bin]]
name = "seks-broker"
path = "src/main.rs"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
