[package]
name = "seks-broker"
version = "0.110.1"
authors = ["The Nushell Project Developers", "SEKS Project Contributors"]
description = "SEKS Broker - Cloud-native secret management for AI agents"
edition = "2021"
license = "MIT"
repository = "https://github.com/rotcsgame/seksh/tree/main/crates/seks-broker"

[[bin]]
name = "seks-broker"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Templates
askama = { version = "0.13", features = ["with-axum"] }
askama_axum = "0.5"

# Crypto
ring = "0.17"
base64 = "0.22"
hex = "0.4"

# Auth
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for proxying)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Password hashing
argon2 = "0.5"

# Utilities
thiserror = "2"
shellexpand = "3"
anyhow = "1"
axum-extra = { version = "0.10", features = ["cookie"] }
cookie = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
